@@ -13,5 +13,8 @@ include = z3c.recipe.compattest
 
 [compattest-trunk]
 recipe = z3c.recipe.compattest
-include = zope.dottedname
-use_svn = true
+include = [example-versions]
+svn_url = svn://svn.zope.org/repos/main/
+
+[example-versions]
+zope.dottedname =
